# openai-cookbook

./: .cursorrules  .gitignore  .mcp.json  .mypy.ini  .ruff.toml  AGENTS.md  Assignment-1-Darshan_Ghoghari.ipynb  BULLETIN.en.md  CODE_OF_CONDUCT.md  COMPAIGPT.sln  COMPANY_CENTRIC_LIFECYCLE_SOLUTION.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT.md  CURSOR_WEB_AGENT_TESTING.md  Coder AI assistant made by me.csv  Cookbook CachimanAI README.md  FAQ.md  FINAL_INFORMATION_QUALITY_BULLETIN_PEER_REVIEW.md  FINANLE.md  FORDERUNG.md  KEYWORD  LICENSE  LICENSE.md  MIGRATION_0.1.h  MODEL  PRESS.md  PYTHON_ENVIRONMENT_SETUP.md  README.md  README.pt-BR.md  RELEASE.md  REPORT_DRAFT.md  Readme.md  SOURCE.md  STIP_COMPASS_Policy_Initiatives_Export_Test 1.csv  TEAM_TESTING_GUIDE.md  Troubleshooting.md  US.md  USA.md  ZENODO.md  (+97 more)
examples/agents_sdk/deployment_manager/: .gitignore  Makefile  README.md  package.json  pyproject.toml  vite.config.js
examples/agents_sdk/deployment_manager/app/: __init__.py  dockerfile_writer.py  main.py  models.py  project_inspector.py  runner.py  store.py  timeline.py  trace_store.py
examples/agents_sdk/deployment_manager/frontend/: index.html
examples/agents_sdk/deployment_manager/scripts/: local_deploy.py  start_manager.py
examples/evals/codereview_evals/: .gitignore  README.md  pyproject.toml
examples/evals/codereview_evals/1_basic_benchmark_harness/: README.md  eval_config.json  grader_system.txt  reviewer_system.txt
examples/evals/codereview_evals/1_benchmark_harness/: AGENTS.md  README.md  eval_config.json  grader_output_schema.json  grader_system.txt  reviewer_system.txt
examples/evals/codereview_evals/2_normalized_benchmark_harness/: AGENTS.md  README.md  eval_config.json  grader_system.txt  pr_brief_system.txt  review_findings_system.txt  reviewer_system.txt
examples/evals/codereview_evals/2_pairwise_harness/: AGENTS.md  README.md  baseline_AGENTS.md  review_output_schema.json
examples/evals/codereview_evals/3_optimization_harness/: AGENTS.md  README.md  baseline_reviewer_system.txt  eval_config.json  optimizer_output_schema.json  optimizer_system.txt  pairwise_judge_system.txt  pairwise_output_schema.json
examples/evals/codereview_evals/3_pairwise_harness/: README.md  candidate_AGENTS.md  eval_config.json  pairwise_judge_system.txt  reviewer_system.txt
examples/evals/codereview_evals/codereview_evals/: __init__.py  benchmark.py  cli.py  evals_api.py  github_cache.py  optimizer.py  pairwise.py  paths.py  prepare.py  reporting.py  state.py  types.py
examples/evals/codereview_evals/tests/: test_benchmark.py  test_cli.py  test_evals_api.py  test_github_cache.py  test_optimizer.py  test_prepare.py  test_reporting.py  test_state.py
examples/evals/realtime_evals/: .gitignore  Makefile  README.md  main.py  plot_eval_results.py  pyproject.toml  requirements-dev.txt  requirements.txt
examples/evals/realtime_evals/.streamlit/: config.toml
examples/evals/realtime_evals/crawl_harness/: README.md  run_realtime_evals.py
examples/evals/realtime_evals/results_viewer/: README.md  __init__.py  app.py  config.py  styles.css  ui.py
examples/evals/realtime_evals/run_harness/: README.md  run_realtime_evals.py
examples/evals/realtime_evals/shared/: __init__.py  graders.py  metrics_utils.py  plotting_utils.py  realtime_harness_utils.py  realtime_utils.py  result_types.py  system_prompt.txt  tools.json  trace_utils.py
examples/evals/realtime_evals/tests/: test_dynamic_result_columns.py  test_eval_run_type_compatibility.py  test_failure_rows.py  test_graders.py  test_plotting_utils.py  test_realtime_harness_utils.py  test_results_viewer.py  test_results_viewer_app.py  test_validation_scripts.py
examples/evals/realtime_evals/walk_harness/: README.md  generate_audio.py  (+1 more)
(+5013 files in other folders)
