[project]
name = "realtime-evals"
version = "0.1.0"
description = "Real-time evaluation examples using the OpenAI Realtime API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai[realtime]==2.15.0",
    "pandas==2.3.3",
]

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pandas-stubs",
  "pytest",
  "streamlit",
  "types-tqdm",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["streamlit"]
ignore_missing_imports = true
